# hebi4

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  build.rs  deny.toml  todo.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  deploy-playground.yml  deploy.yml
asmgen/: Cargo.toml
asmgen/src/: asdf.rs  lib.rs  main.rs  runtime.rs
astgen/: Cargo.toml
astgen/src/: main.rs  nodes.ast  runtime.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: SUMMARY.md  ast.md  compiler.md  intro.md  unsafe.md
globdir/: Cargo.toml
globdir/src/: lib.rs
playground/: .gitignore  Cargo.toml  README.md  examples.js  index.html  main.js  package-lock.json  package.json  vite.config.js
playground/src/: lib.rs
site/: .gitignore  Cargo.toml  base64.js  book.toml  examples.js  index.html  package-lock.json  package.json  style.css  tsconfig.json
site/docs/: SUMMARY.md  compiler.md  guide.md  intro.md  unsafe.md
site/src/: lib.rs
src/: ast.rs  bytecode.md  codegen.rs  core.rs  disasm.rs  error.rs  grammar.md  intern.rs  lib.rs  main.rs  module.rs  parser.md  parser.rs  span.rs  tag.rs  token.rs  vm.rs
src/ast/: debug.rs  node.rs  nodes.ast  nodes.rs  visitor.rs
src/codegen/: opcodes.rs  opcodes.s  tests.rs
src/core/: convert.rs  fmt.rs  list.rs  math.rs  panic.rs  str.rs
src/intern/: iter.rs  simple.rs
src/module/: native.rs
src/parser/: escape.rs  tests.rs
src/token/: tests.rs
src/vm/: array.rs  disasm.rs  gc.rs  tests.rs  value.rs
tests/: parse.rs  token.rs
uitest/: Cargo.toml
xtask/: Cargo.toml
(+912 files in other folders)
