[package]
name = "hebi4"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.0"
hashbrown = "0.15.4"
rustc-hash = "2.1.1"
bumpalo = { version = "3.18.1", features = ["collections", "std", "allocator-api2"] }
beef = "0.5.2"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.release-perf]
inherits = "release"
debug = true

[dev-dependencies]
insta = { version = "1.43.1" }
glob_test = { version = "0.1" }

[workspace]
members = ["asmgen", "astgen", "xtask", "cli", "playground"]
